# demo-compare-parquet-vortex-lance-perf

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
.github/workflows/: tests.yml
data/: compare_ome_arrow_only_runs.parquet  compare_ome_arrow_only_summary.parquet  compare_parquet_vortex_lance_ome_runs.parquet  compare_parquet_vortex_lance_ome_summary.parquet  compare_parquet_vortex_lance_runs.parquet  compare_parquet_vortex_lance_summary.parquet
notebooks/: compare_ome_arrow_only.ipynb  compare_ome_arrow_only.py  compare_parquet_vortex_lance.ipynb  compare_parquet_vortex_lance.py  compare_parquet_vortex_lance_ome.ipynb  compare_parquet_vortex_lance_ome.py
src/benchmarks/: compare_ome_arrow_only.py  compare_parquet_vortex_lance.py  compare_parquet_vortex_lance_ome.py
